# futurecoder

./: .dockerignore  .editorconfig  .firebaserc  .gitignore  .gitmodules  Dockerfile  LICENSE.txt  README.md  app.json  build.sh  ci_build_test.sh  ci_test.sh  database.rules.json  docker-compose.yml  firebase.json  full_build.sh  generate.sh  heroku.yml  how_to_contribute.md  pyproject.toml  pytest.ini  setup.cfg  setup.ps1  setup.sh
.github/: dependabot.yml
.github/workflows/: pytest.yml  workflow.yml
backend/: entrypoint.sh  gunicorn_config.py  gunicorn_config_web.py  gunicorn_config_worker.py  heroku_error_page.html  manage.py  master_server.sh  nginx.conf  package.sh  pytest.ini  setup.ps1  setup.sh
backend/book/: middleware.py  settings.py  urls.py  wsgi.py
backend/core/: core_imports.py  core_imports.txt  exercises.py  generate_static_files.py  linting.py  markdown_extensions.py  text.py  utils.py
backend/main/: admin.py  apps.py  exercises.py  linting.py  linting_tester.py  models.py  simple_settings.py  test_linting.py  test_transcript.json  tests.py  text.py  urls.py  utils.py  views.py  worker.py
core/: checker.py  core_imports.txt  exercises.py  generate_static_files.py  init_pyodide.py  linting.py  markdown_extensions.py  pyodide_helpers.py  question_wizard.py  text.py  translation.py  utils.py
core/basic_runner/: output.py  runner.py  utils.py
core/chapters/: c01_the_shell.py  c02_string_basics.py  c03_variables.py  c04_for_loops.py  c05_if_statements.py  c06_lists.py  c06a_sets.py  c07_a_bit_more_about_strings.py  c08_nested_loops.py  c09_functions.py  c10_boolean operators.py  c11_tic_tac_toe_project.py  c12_dictionaries.py
core/runner/: birdseye.py  didyoumean.py  friendly_traceback.py  runner.py  snoop.py  stack_data.py  stack_data_pygments.py  utils.py
core/workers/: birdseye.py  master.py  question_wizard.py  snoop.py  tracebacks.py  utils.py  worker.py
frontend/: .gitignore  config-overrides.js  craco.config.js  index.html  package-lock.json  package.json  paths.js  vite.config.js
frontend/public/: index.html  manifest.json
frontend/scripts/: fetch_pyodide.sh
frontend/src/: AI.js  App.js  App.jsx  Feedback.js  Feedback.jsx  Hints.js  Hints.jsx  OutputPrediction.js  OutputPrediction.jsx  Requirements.js  RunCode.js  TableOfContents.js  TableOfContents.jsx  TaskClient.js  Worker.js  english_terms.json  index.js  index.jsx  languages.js  load.py  service-worker.js  serviceWorker.js  serviceWorkerRegistration.js  setupProxy.js  store.js  terms.json
homepage/: index.html
myenv/: pyvenv.cfg
myenv/Scripts/: activate  (+3 more)
scripts/: README.md  build.sh  ci_test.sh  deploy.sh  deploy_preview.sh  generate.sh  generate_static_files.py  generate_steps.py  install_deps.sh
tests/: test_frontend.py  test_linting.py  test_question_wizard_check.py  test_steps.py  test_transcript.json
translations/: english.po  generate_po_file.py  get_manual_programs.py  manual_programs.json  translate_futurecoder.py
videos/: scenes.py
(+156 files in other folders)
