[tool.poetry]
name = "book"
version = "0.1.0"
description = ""
authors = ["Alex Hall <alex.mojaki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
birdseye = "@latest"
snoop = "@latest"
asttokens = "@latest"
cheap_repr = "@latest"
littleutils = "@latest"
stack_data = "@latest"
executing = "@latest"
pure_eval = "@latest"
dryenv = "@latest"
Django = "^2.2.7"
django-sass-processor = "^0.7.4"
libsass = "^0.20.1"
django-compressor = "^2.3"
markdown = "^3.1.1"
astcheck = "^0.2.5"
django-allauth = "^0.42.0"
django-user-agents = "^0.4.0"
gevent = {version = "^20.4.0", optional = true}
gunicorn = {version = "^19.9", optional = true}
psycopg2 = {version = "^2.8.4", optional = true}
whitenoise = "^5.0.1"
dj-database-url = "^0.5.0"
django-crispy-forms = "^1.9.0"
sentry-sdk = "^0.17.1"
requests = "^2.23.0"
psutil = "^5.7.0"
jsonfield = "^3.1.0"
pyflakes = "^2.2.0"
BetterErrorMessages = "^0.4"
friendly = "^0.3.43"

[tool.poetry.extras]
production = ["gevent", "gunicorn", "psycopg2"]

[tool.poetry.dev-dependencies]
flake8 = {version = "^3.8.3", optional = true}
isort = "^5.1.4"
pytest-django = "^4.1.0"
selenium = "^3.141.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
