[tool.poetry]
name = "futurecoder"
version = "0.1.0"
description = ""
authors = ["Alex Hall <alex.mojaki@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
birdseye = {git = "https://github.com/alexmojaki/birdseye.git", branch = "futurecoder"}
snoop = "@latest"
asttokens = "@latest"
cheap_repr = "@latest"
littleutils = "@latest"
stack_data = "@latest"
executing = "@latest"
pure_eval = "@latest"
python-runner = "@latest"
markdown = "^3.1.1"
astcheck = "^0.2.5"
pyflakes = "^2.2.0"
BetterErrorMessages = "^0.4"
sentry-sdk = "^1.9.0"
friendly-traceback = "@latest"

[tool.poetry.dev-dependencies]
flake8 = {version = "^3.8.3", optional = true}
isort = "^5.1.4"
selenium = "^3.141.0"
pytest = "^6.2.4"
polib = "^1.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
