[tool.poetry]
name = "futurecoder"
version = "0.1.0"
description = ""
authors = ["Alex Hall <alex.mojaki@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.2"
birdseye = {git = "https://github.com/alexmojaki/birdseye.git", branch = "futurecoder"}
snoop = "*"
asttokens = "*"
cheap_repr = "*"
littleutils = "*"
stack_data = "*"
executing = "*"
pure_eval = "*"
python-runner = "*"
markdown = "^3.1.1"
astcheck = "^0.2.5"
pyflakes = "^2.2.0"
BetterErrorMessages = "^0.4"
sentry-sdk = "*"
friendly-traceback = "*"
setuptools = "*"

[tool.poetry.dev-dependencies]
flake8 = {version = "^3.8.3", optional = true}
isort = "^5.1.4"
selenium = "^3.141.0"
polib = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
